@@ -1,5 +1,5 @@
 //
-// "$Id: Fl_Box.H,v 1.5.2.4.2.1 2002/01/01 15:11:27 easysw Exp $"
+// "$Id: Fl_Box.H,v 1.5.2.4.2.2 2002/04/12 20:16:07 easysw Exp $"
 //
 // Box header file for the Fast Light Tool Kit (FLTK).
 //
@@ -32,16 +32,18 @@
 
 class Fl_Box : public Fl_Widget {
 protected:
-    FL_EXPORT void draw();
+  FL_EXPORT void draw();
 public:
-    FL_EXPORT Fl_Box(int x, int y, int w, int h, const char *l=0)
+  FL_EXPORT Fl_Box(int x, int y, int w, int h, const char *l=0)
 	: Fl_Widget(x,y,w,h,l) {}
-    FL_EXPORT Fl_Box(Fl_Boxtype b, int x, int y, int w, int h, const char *l)
+  FL_EXPORT Fl_Box(Fl_Boxtype b, int x, int y, int w, int h, const char *l)
 	: Fl_Widget(x,y,w,h,l) {box(b);}
+
+  virtual FL_EXPORT int handle(int);
 };
 
 #endif
 
 //
-// End of "$Id: Fl_Box.H,v 1.5.2.4.2.1 2002/01/01 15:11:27 easysw Exp $".
+// End of "$Id: Fl_Box.H,v 1.5.2.4.2.2 2002/04/12 20:16:07 easysw Exp $".
 //
